# libwirecall

./: CMakeLists.txt  README.md
cmake/: wirepump.cmake
include/: wirecall.hpp
include/wirecall/: any_socket.hpp  async_channel.hpp  async_mutex.hpp  buffered_socket.hpp  connection.hpp  ipc.hpp  pubsub.hpp
tests/: CMakeLists.txt  demo.cpp  ipc.cpp
